fix font size on mobile

--- a/cv/responsive.less
+++ b/cv/responsive.less
@@ -121,7 +121,7 @@ h5 {
   .header.right {
     font-size: 0.7rem;
     width: 60%;
-    padding: 6mm 0 5mm 5mm;
+    padding: 6mm 1mm 5mm 3mm;
     @media screen and (min-width: 800px) {
       font-size: 10pt;
       width: @pagewidth - 96;
